# ML-ACT

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
evaluation/: comparison.py  metrics.py
kaggle_integration/: kaggle_loader.py
models/: classification_models.py  regression_models.py  semi_supervised.py
ollama_integration/: report_generator.py
preprocessing/: missing_handler.py  normalization.py  outlier_detection.py
reports/: ai_report.txt
saved_models/: cart.pkl  decision_tree_id3_-_entropy.pkl  knn.pkl  logistic_regression.pkl  naive_bayes.pkl
tuning/: hyperparameter_tuning.py
utils/: helpers.py
visualization/: plots.py
