[project]
name = "ml-comparison-framework"
version = "1.0.0"
description = "Machine Learning Algorithm Comparison Framework"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.8.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]
